# crewAI-quickstart

./: .gitignore  README.md  crewai-example-task-event-planning-quickstart.ipynb  crewai_custom_tool_template_quickstart.ipynb  crewai_example_collaboration_financial_analysis_quickstart.ipynb  crewai_example_job_application_quickstart.ipynb  crewai_hierarchical_quickstart.ipynb  crewai_sequential_BrowserbaseLoadTool_quickstart.ipynb  crewai_sequential_CSVSearchTool_quickstart.ipynb  crewai_sequential_CodeDocsSearchTool_quickstart.ipynb  crewai_sequential_CodeInterpreterTool_quickstart.ipynb  crewai_sequential_DOCXSearchTool_quickstart.ipynb  crewai_sequential_DirectoryReadTool_quickstart.ipynb  crewai_sequential_GithubSearchTool_quickstart.ipynb  crewai_sequential_JSONSearchTool_quickstart.ipynb  crewai_sequential_MDXSearchTool_quickstart.ipynb  crewai_sequential_PDFSearchTool_quickstart.ipynb  crewai_sequential_PGSearchTool_quickstart.ipynb  crewai_sequential_ScrapeWebsiteTool_quickstart.ipynb  crewai_sequential_SeleniumScrapingTool_quickstart.ipynb  crewai_sequential_SerperDevTool_quickstart.ipynb  crewai_sequential_TXTSearchTool_quickstart.ipynb  crewai_sequential_WebsiteSearchTool_quickstart.ipynb  crewai_sequential_XMLSearchTool_quickstart.ipynb  crewai_sequential_YoutubeChannelSearchTool_quickstart.ipynb  crewai_sequential_YoutubeVideoSearchTool_quickstart.ipynb  crewai_sequential_composio_core_quickstart.ipynb  crewai_sequential_quickstart.ipynb  crewai_sequential_websearch_quickstart.ipynb  pyproject.toml
crewai-hierarchical-quickstart/: .env  CHEATSHEET.md  main.py  pyproject.toml
crewai-sequential-ollama2-quickstart/: .env  CHEATSHEET.md  main.py  pyproject.toml
crewai-sequential-ollama3-quickstart/: .env  CHEATSHEET.md  main.py
crewai-sequential-quickstart/: .env  CHEATSHEET.md  main.py  pyproject.toml
crewai-streamlit-hierarchical-quickstart/: app.py  stream.py
crewai-streamlit-sequential-quickstart/: README.md  app.py  pyproject.toml
